# fitparse

./: .gitignore  Cargo.toml  Pipfile  README.md  reference_record.txt
src/: errors.rs  fitfile.rs  fitmessagerecord_test.rs  fitparsers.rs  fitparsingstate.rs  fittypes.rs  fittypes_test.rs  fittypes_utils.rs  lib.rs
tests/: activity_test.rs
tools/: dump_fit_messages-orig.py  dump_fit_messages.py
