[package]
name = "fitparse"
version = "0.1.0"
authors = ["dan kelley <djk121@gmail.com>"]
include = [
  "Cargo.toml",
  "src/*.rs",
]

[profile.release]
debug = true

[dependencies]
nom = "^3.2"
chrono = "0.3"
clap = "2.30.0"
failure = "0.1.6"
bit-vec = "0.4.4"
byteorder = "1.2.6"
itertools = "^0.6"
bitvec = "^0.15.2"
conv = "^0.3.3"