[package]
name = "fitparse"
version = "0.1.0"
authors = ["dan kelley <djk121@gmail.com>"]
description = "Rust library for parsing files in Garmin FIT format"
readme = "README.md"
repository = "https://github.com/djk121/fitparse"
license = "MIT"
keywords = ["FIT"]

include = [
  "Cargo.toml",
  "src/*.rs",
  "tests/*.rs",
  "bin/*.rs",
  "tools/*.py",
  "Pipfile",
]

[profile.release]
debug = true

[dependencies]
#nom = "^3.2"
nom = "5.1.2"
chrono = "0.3"
clap = "2.30.0"
thiserror = "1.0.20"
anyhow = "1.0.32"
bit-vec = "0.4.4"
byteorder = "1.2.6"
itertools = "^0.6"
bitvec = "^0.17.4"
conv = "^0.3.3"
backtrace = "0.3"