[package]
name = "fitparse"
version = "0.1.0"
authors = ["dan kelley <djk121@gmail.com>"]
description = "Rust library for parsing files in Garmin FIT format"
readme = "README.md"
repository = "https://github.com/djk121/fitparse"
license = "MIT"
keywords = ["FIT"]

include = [
  "Cargo.toml",
  "src/*.rs",
  "tests/*.rs",
  "bin/*.rs",
  "tools/*.py",
  "Pipfile",
]

[profile.release]
debug = true

[dependencies]
nom = "7.1.3"
chrono = "0.4"
clap = "2.30.0"
thiserror = "1.0.48"
anyhow = "1.0.75"
bit-vec = "0.4.4"
byteorder = "1.2.6"
itertools = "^0.6"
bitvec = "^0.17.4"
conv = "^0.3.3"
backtrace = "0.3"
paste = "1.0.14"
